# libnlp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
.devcontainer/: Dockerfile  devcontainer.json
cmake/: CompilerWarnings.cmake  Doxygen.cmake  PreventInSourceBuilds.cmake  StandardProjectSettings.cmake
include/: common.h  readutils.h  strutils.h  thrdpool.h  tokenizer.h
src/: CMakeLists.txt  map.c  map.h  msgqueue.c  readutils.c  strchr.c  strstr.c  strutils.c  thrdpool.c  tokenizer.c  u-strstr.h  u8-strchr.c
src/win/: pthread.h
test/: CMakeLists.txt  test.c  test_strutils.c  test_tokenizer.c
